--- a/packages/app-next/package.json
+++ b/packages/app-next/package.json
@@ -49,6 +49,7 @@
     "@backstage/plugin-api-docs": "workspace:^",
     "@backstage/plugin-app": "workspace:^",
     "@backstage/plugin-app-visualizer": "workspace:^",
+    "@backstage/plugin-auth": "workspace:^",
     "@backstage/plugin-auth-react": "workspace:^",
     "@backstage/plugin-catalog": "workspace:^",
     "@backstage/plugin-catalog-common": "workspace:^",
