bui: add new NumberField component
Mirrors the TextField BUI component but uses the
NumberField from react-aria-components instead of
the TextField.

Signed-off-by: MT Lewis <mtlewis@users.noreply.github.com>

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -39,6 +39,7 @@
   },
   "dependencies": {
     "@base-ui-components/react": "1.0.0-alpha.7",
+    "@react-types/shared": "^3.30.0",
     "@remixicon/react": "^4.6.0",
     "@storybook/test": "^8.6.12",
     "@tanstack/react-table": "^8.21.3",
