--- a/storybook/package.json
+++ b/storybook/package.json
@@ -14,30 +14,25 @@
     ]
   },
   "dependencies": {
-    "@storybook/addon-storysource": "^8.3.6",
     "react": "^18.0.2",
     "react-dom": "^18.0.2"
   },
   "devDependencies": {
-    "@chromatic-com/storybook": "^1.9.0",
-    "@storybook/addon-essentials": "^8.3.5",
-    "@storybook/addon-interactions": "^8.3.5",
-    "@storybook/addon-links": "^8.3.5",
-    "@storybook/addon-themes": "^8.3.6",
-    "@storybook/blocks": "^8.3.5",
-    "@storybook/react": "^8.3.5",
-    "@storybook/react-vite": "^8.3.5",
-    "@storybook/test": "^8.3.5",
-    "@storybook/types": "^8.3.5",
+    "@chromatic-com/storybook": "^4.1.1",
+    "@storybook/addon-docs": "^9.1.5",
+    "@storybook/addon-links": "^9.1.5",
+    "@storybook/addon-themes": "^9.1.5",
+    "@storybook/react-vite": "^9.1.5",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "eslint": "^9.11.1",
-    "eslint-plugin-storybook": "^0.12.0",
+    "eslint-plugin-storybook": "^9.1.5",
     "globals": "^15.9.0",
+    "msw": "^2.4.9",
     "react-router-dom": "^6.3.0",
-    "storybook": "^8.3.5",
+    "storybook": "^9.1.5",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.7.0",
     "vite": "^5.4.8"
