--- a/plugins/bui-themer/package.json
+++ b/plugins/bui-themer/package.json
@@ -30,9 +30,11 @@
     "@backstage/core-plugin-api": "workspace:^",
     "@backstage/frontend-plugin-api": "workspace:^",
     "@backstage/theme": "workspace:^",
+    "@backstage/ui": "workspace:^",
     "@material-ui/core": "^4.9.13",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.61",
+    "@mui/material": "^7.3.2",
     "react-use": "^17.2.4"
   },
   "peerDependencies": {
