--- a/.github/workflows/verify_storybook.yml
+++ b/.github/workflows/verify_storybook.yml
@@ -49,8 +49,8 @@ jobs:
         with:
           cache-prefix: ${{ runner.os }}-v${{ matrix.node-version }}
 
-      - name: Build Storybook
-        run: yarn build-storybook
+      - name: Build Storybook for Chromatic
+        run: yarn build-storybook:chromatic
 
       - name: Deploy Storybook to Chromatic
         uses: chromaui/action@1cfa065cbdab28f6ca3afaeb3d761383076a35aa # v11
@@ -59,4 +59,4 @@ jobs:
           # projectToken intentionally shared to allow collaborators to run Chromatic on forks
           # https://www.chromatic.com/docs/custom-ci-provider#run-chromatic-on-external-forks-of-open-source-projects
           projectToken: chpt_dab72dc0f97d55b
-          storybookBuildDir: dist-storybook
+          storybookBuildDir: dist-storybook-chromatic
