--- a/plugins/catalog-backend-module-github/package.json
+++ b/plugins/catalog-backend-module-github/package.json
@@ -60,10 +60,10 @@
     "@backstage/plugin-catalog-common": "workspace:^",
     "@backstage/plugin-catalog-node": "workspace:^",
     "@backstage/plugin-events-node": "workspace:^",
-    "@octokit/core": "^5.2.0",
-    "@octokit/graphql": "^7.0.2",
+    "@octokit/core": "^5.2.1",
+    "@octokit/graphql": "^7.1.1",
     "@octokit/plugin-throttling": "^8.1.3",
-    "@octokit/rest": "^19.0.3",
+    "@octokit/rest": "^21.1.1",
     "git-url-parse": "^15.0.0",
     "lodash": "^4.17.21",
     "minimatch": "^9.0.0",
@@ -72,6 +72,7 @@
   "devDependencies": {
     "@backstage/backend-test-utils": "workspace:^",
     "@backstage/cli": "workspace:^",
+    "@octokit/webhooks-types": "^7.6.1",
     "@types/lodash": "^4.14.151",
     "luxon": "^3.0.0",
     "msw": "^2.0.0",
