--- a/.github/workflows/verify_chromatic.yml
+++ b/.github/workflows/verify_chromatic.yml
@@ -60,9 +60,19 @@ jobs:
 
       - name: Post Chromatic Link in PR Comment
         if: github.event_name == 'pull_request' && steps.chromatic.outputs.url
-        uses: dannyhw/storybook-chromatic-link-comment@v0.11
+        uses: mshick/add-pr-comment@v2
         with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          review-url: ${{ steps.chromatic.outputs.url }}
-          build-url: ${{ steps.chromatic.outputs.buildUrl }}
-          storybook-url: ${{ steps.chromatic.outputs.storybookUrl }}
+          message: |
+            ## 🎨 Visual Testing Results
+
+            Your visual changes have been tested with Chromatic! Here are the results:
+
+            | 🔗 Link | Description |
+            |---------|-------------|
+            | [**Review Changes**](${{ steps.chromatic.outputs.url }}) | View visual diffs and approve/reject changes |
+            | [**Build Details**](${{ steps.chromatic.outputs.buildUrl }}) | See detailed build information |
+            | [**Live Storybook**](${{ steps.chromatic.outputs.storybookUrl }}) | Browse the interactive component library |
+
+            ---
+            *This comment is automatically updated when visual tests run.*
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
